--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
   "author": "Darkystel",
   "license": "MIT",
   "devDependencies": {
+    "@types/callsite": "^1.0.30",
     "@types/node": "^14.11.2",
     "@types/ora": "^3.2.0",
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "caller-callsite": "^4.1.0",
+    "caller-path": "^3.0.0",
+    "callsite": "^1.0.0",
     "discord-command-parser": "^1.5.0",
     "discord.js": "^12.3.1",
-    "ora": "^5.1.0"
+    "ora": "^5.1.0",
+    "parent-module": "^2.0.0"
   }
 }
