--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ortio-core",
+  "name": "@ortio/core",
   "version": "1.0.0",
   "description": "A simple package for creating discord bots",
   "main": "dist/index.js",
@@ -8,8 +8,12 @@
   "license": "MIT",
   "devDependencies": {
     "@types/callsite": "^1.0.30",
+    "@types/jest": "^26.0.14",
     "@types/node": "^14.11.2",
     "@types/ora": "^3.2.0",
+    "dotenv": "^8.2.0",
+    "jest": "^26.4.2",
+    "ts-jest": "^26.4.1",
     "typescript": "^4.0.3"
   },
   "dependencies": {
@@ -20,5 +24,9 @@
     "discord.js": "^12.3.1",
     "ora": "^5.1.0",
     "parent-module": "^2.0.0"
+  },
+  "scripts": {
+    "prepublish": "tsc",
+    "test": "jest --passWithNoTests"
   }
 }
