--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@ortio/core",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A simple package for creating discord bots",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "author": "Darkystel",
   "license": "MIT",
+  "repository": "https://github.com/Darkystel/ortio-core.git",
   "devDependencies": {
     "@types/callsite": "^1.0.30",
     "@types/jest": "^26.0.14",
@@ -17,13 +18,9 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "caller-callsite": "^4.1.0",
-    "caller-path": "^3.0.0",
-    "callsite": "^1.0.0",
     "discord-command-parser": "^1.5.0",
     "discord.js": "^12.3.1",
-    "ora": "^5.1.0",
-    "parent-module": "^2.0.0"
+    "ora": "^5.1.0"
   },
   "scripts": {
     "prepublish": "tsc",
