--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ortio/core",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A simple package for creating discord bots",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -30,5 +30,8 @@
   "scripts": {
     "prepublish": "tsc",
     "test": "jest --passWithNoTests"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   }
 }
