--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "dotenv": "^8.2.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.4.1",
+    "typedoc": "^0.19.2",
+    "typedoc-plugin-markdown": "^3.0.3",
     "typescript": "^4.0.3"
   },
   "dependencies": {
